# plover-touchscreen-stenotype

./: .gitignore  MANIFEST.in  README.md  index.py  install.bat  setup.cfg  setup.py  widget.py
plover_onscreen_stenotype/: Main.py  settings.py  util.py  widget.py
plover_onscreen_stenotype/widgets/: KeyWidget.py  KeyboardWidget.py  SettingsDialog.py  StrokePreview.py  TranslationDisplay.py  build_keyboard.py
plover_touchscreen_stenotype/: Main.py  NoneMachine.py  settings.py  util.py
plover_touchscreen_stenotype/lib/: Joystick.py  UseDpi.py  UseJoystickControl.py  constants.py  reactivity.py  types.py  util.py
plover_touchscreen_stenotype/lib/keyboard_layout/: LayoutDescriptor.py  types.py  use_build_keyboard.py
plover_touchscreen_stenotype/lib/keyboard_layout/descriptors/: __init__.py  common.py  english_stenotype.py  english_stenotype_amphitheory.py  english_stenotype_extended_custom.py  english_stenotype_ireland.py  english_stenotype_lapwing.py  english_velotype.py
plover_touchscreen_stenotype/widgets/: CenterControls.py  DisplayAlignmentLayout.py  FloatInput.py  FloatSlider.py  FramelessControls.py  GroupObject.py  JoysticksWidget.py  KeyGroupWidget.py  KeyWidget.py  KeyboardWidget.py  RotatableKeyContainer.py  SettingsDialog.py  StrokePreview.py  Synthesizer.py  build_keyboard.py
plover_touchscreen_stenotype/widgets/build_keyboard_config/: english_stenotype.py  stenotype_extended_custom.py
plover_touchscreen_stenotype/widgets/composables/: UseDpi.py  UseJoystickControl.py
plover_touchscreen_stenotype/widgets/joysticks/: JoysticksWidget.py
plover_touchscreen_stenotype/widgets/keyboard/: GroupObject.py  KeyGroupWidget.py  KeyboardWidget.py
