[metadata]
name = plover-touchscreen-stenotype
version = 0.0.0a0
keywords = plover plover_plugin

description = Touchscreen stenotype that utilizes multi-touch
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0.dev12
    pywin32 >= 304.0.0; platform_system=="Windows"
packages =
    plover_touchscreen_stenotype
    plover_touchscreen_stenotype.widgets

[options.entry_points]
plover.gui.qt.tool =
    touchscreen_stenotype = plover_touchscreen_stenotype.Main:Main