[metadata]
name = plover-touchscreen-stenotype
version = 0.1.0a0
keywords = plover plover_plugin

description = Touchscreen stenotype that utilizes multi-touch
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover[gui_qt] >= 4.0.0.dev12
    pywin32 >= 304.0.0; platform_system=="Windows"
    numpy >= 1.24
    pyaudio >= 0.2
packages =
    plover_touchscreen_stenotype
    plover_touchscreen_stenotype.widgets

[options.entry_points]
plover.gui.qt.tool =
    touchscreen_stenotype = plover_touchscreen_stenotype.Main:Main