[metadata]
name = plover-touchscreen-stenotype
version = 0.2.0b0
keywords = plover plover_plugin

description = Touchscreen stenotype that utilizes multi-touch
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover[gui_qt] >= 4.0.0.dev12
    pywin32 >= 304.0.0; platform_system=="Windows"
packages =
    plover_touchscreen_stenotype
    plover_touchscreen_stenotype.lib
    plover_touchscreen_stenotype.widgets
    plover_touchscreen_stenotype.widgets.build_keyboard_config

[options.entry_points]
plover.gui.qt.tool =
    touchscreen_stenotype = plover_touchscreen_stenotype.Main:Main
plover.machine =
    (None) = plover_touchscreen_stenotype.NoneMachine:NoneMachine
plover.command =
    # touchscreen_stenotype.open = plover_touchscreen_stenotype.Main:command_open
    touchscreen_stenotype.close = plover_touchscreen_stenotype.Main:command_close
    touchscreen_stenotype.minimize = plover_touchscreen_stenotype.Main:command_minimize
    touchscreen_stenotype.open_settings = plover_touchscreen_stenotype.Main:command_open_settings